# ag-ui

apps/dojo/src/: agents.ts  env.ts  menu.ts
integrations/agent-spec/python/: README.md  pyproject.toml
integrations/agent-spec/python/ag_ui_agentspec/: __init__.py  agent.py  agentspec_tracing_exporter.py  agentspecloader.py  endpoint.py
integrations/agent-spec/python/ag_ui_agentspec/runtimes/: __init__.py  langgraph_runner.py  wayflow_runner.py
integrations/agent-spec/python/examples/: README.md  pyproject.toml
integrations/agent-spec/python/examples/server/: __init__.py
integrations/agent-spec/python/examples/server/api/: __init__.py  agentic_chat.py  backend_tool_rendering.py  human_in_the_loop.py  routes.py  tool_based_generative_ui.py
